# Vivaria

./: .gitignore  README.md
scripts/: build_windows_debug_x86.bat  build_windows_release_x86.bat  install_buildtools_windows.bat
src/: CMakeLists.txt  vivaria.cpp  vivaria.h
